Code analysis fixes and nullability annotation consistency